--- a/css/global.css
+++ b/css/global.css
@@ -15,3 +15,14 @@ body{
     padding: 1rem 0;
     text-align: center;
 }
+.site-title{
+    margin-bottom: 10px;
+    font-size: 2em;
+}
+
+.main-nav .nav-list{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    
+}
